# task-manager

./: Cargo.toml  README.md  RELEASE_NOTES_v0.1.0.md  rustfmt.toml
.github/workflows/: ci.yml
src/: config.rs  main.rs  snippets.rs  tasks.rs  test_setup.rs  timers.rs
src/tasks/: cli.rs  crud.rs  filtering.rs  mod.rs  persistence.rs  stats.rs  task.rs  tasks.rs  update.rs
src/tasks/crud/: tests.rs
src/tests_common/: config_test_fixtures.rs  mod.rs  test_setup.rs  test_utils_tasks.rs
tests/: integration_tests.rs
