[package]
name = "task-manager"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

structopt = "0.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.0"
serde_yaml = "0.8"
predicates = "3.1.0"
regex = "1.10.3"
colored = "2.1.0"

[dev-dependencies]
assert_cmd = "2.0"
